# llm

./: .gitignore  pyproject.toml  test.py
spargel_llm/: bpe.py  data_source.py  text_source.py  tokenizer.py
spargel_llm/layers/: jax.py  reference.py
spargel_llm/v1/: jax.py  torch.py
tests/: test_bpe.py  test_data_source.py  test_text_source.py  test_tokenizer.py
