[project]
name = "llm"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "numpy>=2.3.3",
    "regex>=2025.9.1",
]

[project.optional-dependencies]
jax_cuda12 = [
    "flax>=0.11.2",
    "jax[cuda12]>=0.7.1",
    "optax>=0.2.5",
]
matplotlib = [
    "matplotlib>=3.10.6"
]
tensorboard = [
    "tensorboard>=2.20.0",
]
torch_cpu = [
    "torch>=2.8.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ruff>=0.13.0",
]

[tool.ruff.lint]
extend-select = [
    "I"
]